--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "babel": "^5.6.14",
     "coffee-script": "^1.9.3",
+    "espower-babel": "^3.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-mocha": "^2.1.3",
     "gulp-watch": "^4.2.4"
   }
 }
