--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "gulp-babel": "^5.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-mocha": "^2.1.3",
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "mock-udp": "^0.1.1"
   }
 }
