--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "gulp-coffee": "^2.3.1",
     "gulp-mocha": "^2.1.3",
     "gulp-watch": "^4.2.4",
-    "mock-udp": "^0.1.1"
+    "mock-udp": "^0.1.1",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0"
   }
 }
