--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "gulp-mocha": "^2.1.3",
     "gulp-watch": "^4.2.4",
     "mock-udp": "^0.1.1",
+    "rewire": "^2.3.4",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0"
   }
